--- a/style.css
+++ b/style.css
@@ -503,4 +503,18 @@ footer {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: opacity 0.5s ease-in-out;
   display: block;
+
+}
+ 
+
+.formularz-container {
+  max-width: 900px;
+  margin: 40px auto;
+  padding: 0 20px;
+}
+
+.formularz-title {
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 20px;
 }
