--- a/style.css
+++ b/style.css
@@ -130,14 +130,24 @@ nav a:hover {
   text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
 }
 
-.hero-dog-image {
-  width: 80%;
+.hero-image {
+  width: 100%;
   max-width: 600px;
-  height: auto;
+  height: 400px;
+  margin: 0 auto;
+  overflow: hidden; /* przytnie zdjęcie */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-dog-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  margin: 0 auto 20px;
-  display: block;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .hero button {
